cleaned up some CSS, added a desc to the demo page

--- a/tilefill.css
+++ b/tilefill.css
@@ -19,7 +19,4 @@
     -o-box-sizing: border-box;
     box-sizing: border-box;
     display: block;
-    float: left;
-    position: relative; }
-    .tilefill .tile .title {
-      text-align: center; }
+    float: left; }
