demo page tweaks

--- a/scss/tilefill.scss
+++ b/scss/tilefill.scss
@@ -12,7 +12,7 @@
 
   .tile {
     background: #eee;
-    border: 1px solid #333;
+    border: 1px solid #ccc;
     @include box-sizing(border-box);
     display: block;
     float: left;
